# ITKModuleTemplate

./: .travis.yml  cookiecutter.json
.github/workflows/: build-test-package.yml  clang-format-linter.yml
{{cookiecutter.project_name}}/: CMakeLists.txt  README.md  itk-module.cmake  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: build-test-package.yml  clang-format-linter.yml
{{cookiecutter.project_name}}/examples/: CMakeLists.txt  {{ cookiecutter.example_name }}.cxx  {{ cookiecutter.example_name }}.py
